# 4_sem

./: README.md
box/: box.hpp  list.hpp  main.c
progress_check/: buffer.h  main.cpp  producer.cpp  task2.cpp  task3.cpp
progress_check/task2/: buffer.h  producer.cpp
snake/: AI.cpp  AI.h  CMakeLists.txt  Makefile  a.out  control.cpp  control.h  error.txt  game.cpp  game.h  gui.cpp  gui.h  human.cpp  human.h  key.h  main.cpp  tui.cpp  tui.h  ui.cpp  ui.h  xxx.c
